l10n: es.po: fix typos
Fix some typos in the spanish translation.

Signed-off-by: Gaston Gonzalez <gascoar@gmail.com>

--- a/po/es.po
+++ b/po/es.po
@@ -4746,7 +4746,7 @@ msgstr ""
 #: wt-status.c:1668
 #, c-format
 msgid "nothing to commit, working tree clean\n"
-msgstr "nada para hacer comit, el arbol de trabajo esta limpio\n"
+msgstr "nada para hacer commit, el arbol de trabajo esta limpio\n"
 
 #: wt-status.c:1780
 msgid "No commits yet on "
@@ -15518,17 +15518,17 @@ msgid ""
 "\n"
 "  git rebase --continue\n"
 msgstr ""
-"TIene cambios en el area de stage de su arbol de trabajo.\n"
+"Tiene cambios en el area de stage de su arbol de trabajo.\n"
 "Si estos cambios estan destinados a \n"
 "ser aplastados en el commit previo, ejecute:\n"
 "\n"
 "  git commit --amend $gpg_sign_opt_quoted\n"
 "\n"
-"Si estos estan destinados a ir en un nuevo comit, ejecute:\n"
+"Si estos estan destinados a ir en un nuevo commit, ejecute:\n"
 "\n"
 "  git commit $gpg_sign_opt_quoted\n"
 "\n"
-"En ambos casos, cuando termite, continue con:\n"
+"En ambos casos, cuando termine, continue con:\n"
 "\n"
 "  git rebase --continue\n"
 
