--- a/po/es.po
+++ b/po/es.po
@@ -7643,7 +7643,7 @@ msgid ""
 msgstr ""
 "Los cambios locales de los siguientes archivos serán sobrescritos al "
 "fusionar:\n"
-"%%sPor favor, confirma tus cambios o aguárdalos antes de fusionar."
+"%%sPor favor, confirma tus cambios o guárdalos antes de fusionar."
 
 #: unpack-trees.c:118
 #, c-format
